[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/assets/magic.png" type="Texture" id=1]
[ext_resource path="res://player/magic.gd" type="Script" id=2]
[ext_resource path="res://player/assets/pointer.png" type="Texture" id=3]
[ext_resource path="res://player/assets/staff.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CircleShape2D" id=5]
radius = 6.08276

[node name="Select" type="Node2D"]
script = ExtResource( 2 )

[node name="Menu" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Pointer" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 3 )

[node name="Staffs" type="Sprite" parent="."]
position = Vector2( -22, -22 )
texture = ExtResource( 4 )

[node name="ThunderShield" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThunderShield"]
position = Vector2( -11, 0 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="ThunderShield"]
position = Vector2( -20, 0 )
rotation = -1.5708
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="IceShot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IceShot"]
position = Vector2( 0, -12 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="IceShot"]
position = Vector2( 0, -20 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="GrassRadial" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrassRadial"]
position = Vector2( 11, 0 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="GrassRadial"]
position = Vector2( 20, 0 )
rotation = 1.5708
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="BloodHeal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloodHeal"]
position = Vector2( 0, 12 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="BloodHeal"]
position = Vector2( 0, 20 )
rotation = 3.14159
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="CrystalShot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrystalShot"]
position = Vector2( -22, -22 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="CrystalShot"]
position = Vector2( -22, -9 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[connection signal="mouse_entered" from="ThunderShield" to="." method="_on_ThunderShield_mouse_entered"]
[connection signal="mouse_entered" from="IceShot" to="." method="_on_IceShot_mouse_entered"]
[connection signal="mouse_entered" from="GrassRadial" to="." method="_on_GrassRadial_mouse_entered"]
[connection signal="mouse_entered" from="BloodHeal" to="." method="_on_BloodHeal_mouse_entered"]
[connection signal="mouse_entered" from="CrystalShot" to="." method="_on_Staff_mouse_entered"]
